--- a/_sass/_slick-nav.scss
+++ b/_sass/_slick-nav.scss
@@ -75,20 +75,7 @@
     position: relative;
     top: -9px;  
 }
-.slicknav_btn {
-	background-color: transparent;
-	cursor: pointer;
-	margin-bottom: 10px;
-	position: relative;
-	z-index: 99;
-	border: none;
-	border-radius: 3px;
-	top: 5px;
-	padding: 5px;
-	right: 5px;
-	margin-top: -5px;
-	top: -31px;
-}
+
 .slicknav_btn {
 	background-color: transparent;
 	cursor: pointer;
@@ -100,6 +87,6 @@
 	top: 5px;
 	padding: 5px;
 	right: 0;
-	margin-top: -5px;
+	margin-top: -15px;
     top: -33px;
 }
