--- a/css/style.css
+++ b/css/style.css
@@ -340,6 +340,9 @@ h3 {
     background: transparent; }
   .boxed-btn3:focus {
     outline: none; }
+  @media (max-width: 767px) {
+    .boxed-btn3 {
+      margin-bottom: 20px; } }
 
 .boxed-btn4 {
   display: inline-block;
@@ -597,22 +600,8 @@ h3 {
   border-radius: 3px;
   top: 5px;
   padding: 5px;
-  right: 5px;
-  margin-top: -5px;
-  top: -31px; }
-
-.slicknav_btn {
-  background-color: transparent;
-  cursor: pointer;
-  margin-bottom: 10px;
-  position: relative;
-  z-index: 99;
-  border: none;
-  border-radius: 3px;
-  top: 5px;
-  padding: 5px;
   right: 0;
-  margin-top: -5px;
+  margin-top: -15px;
   top: -33px; }
 
 .header-area {
@@ -666,12 +655,21 @@ h3 {
       @media (min-width: 992px) and (max-width: 1200px) {
         .header-area .main-header-area .logo-img {
           text-align: left; } }
-      @media (max-width: 767px) {
-        .header-area .main-header-area .logo-img img {
-          width: 70px; } }
-      @media (min-width: 768px) and (max-width: 991px) {
-        .header-area .main-header-area .logo-img img {
-          width: 70px; } }
+      .header-area .main-header-area .logo-img img {
+        width: 90px;
+        height: 90px; }
+        @media (max-width: 767px) {
+          .header-area .main-header-area .logo-img img {
+            width: 70px;
+            height: 70px; } }
+        @media (min-width: 768px) and (max-width: 991px) {
+          .header-area .main-header-area .logo-img img {
+            width: 70px;
+            height: 70px; } }
+        @media (min-width: 992px) and (max-width: 1200px) {
+          .header-area .main-header-area .logo-img img {
+            width: 70px;
+            height: 70px; } }
     .header-area .main-header-area .Appointment {
       display: -webkit-box;
       display: -moz-box;
@@ -700,6 +698,22 @@ h3 {
             .header-area .main-header-area .Appointment .phone_num a {
               font-size: 13px; } }
           .header-area .main-header-area .Appointment .phone_num a i {
+            color: #33D4D6;
+            font-size: 14px;
+            margin-right: 7px; }
+      .header-area .main-header-area .Appointment .email_desc {
+        margin-right: 0px; }
+        @media (min-width: 1200px) and (max-width: 1500px) {
+          .header-area .main-header-area .Appointment .email_desc {
+            margin-right: 12px; } }
+        .header-area .main-header-area .Appointment .email_desc a {
+          font-size: 14px;
+          font-weight: 400;
+          color: #FFFFFF; }
+          @media (min-width: 1200px) and (max-width: 1500px) {
+            .header-area .main-header-area .Appointment .email_desc a {
+              font-size: 13px; } }
+          .header-area .main-header-area .Appointment .email_desc a i {
             color: #33D4D6;
             font-size: 14px;
             margin-right: 7px; }
@@ -1748,11 +1762,11 @@ p #amount {
   .footer p {
     font-family: "Roboto", sans-serif !important; }
   .footer .footer_top {
-    padding-top: 145px;
-    padding-bottom: 129px; }
+    padding-top: 60px;
+    padding-bottom: 10px; }
     @media (max-width: 767px) {
       .footer .footer_top {
-        padding-top: 60px;
+        padding-top: 40px;
         padding-bottom: 30px; } }
     @media (max-width: 767px) {
       .footer .footer_top .footer_widget {
@@ -1765,7 +1779,7 @@ p #amount {
       font-weight: 500;
       color: #040E27;
       text-transform: capitalize;
-      margin-bottom: 40px;
+      margin-bottom: 20px;
       font-family: "Roboto", sans-serif; }
       @media (max-width: 767px) {
         .footer .footer_top .footer_widget .footer_title {
@@ -1775,7 +1789,7 @@ p #amount {
       font-weight: 400;
       color: #040E27;
       text-transform: capitalize;
-      margin-bottom: 40px; }
+      margin-bottom: 10px; }
       @media (max-width: 767px) {
         .footer .footer_top .footer_widget .footer_logo {
           margin-bottom: 20px; } }
@@ -1859,6 +1873,15 @@ p #amount {
       font-size: 13px;
       color: #7A838B;
       line-height: 26px; }
+    .footer .footer_top .footer_links ul li {
+      display: inline-block;
+      position: relative;
+      margin: 0px 25px; }
+      .footer .footer_top .footer_links ul li a {
+        font-weight: 500;
+        font-size: 19px;
+        font-family: "Roboto", sans-serif;
+        text-transform: capitalize; }
   .footer .copy-right_text {
     padding-bottom: 30px; }
     .footer .copy-right_text .copy_right {
@@ -1872,7 +1895,7 @@ p #amount {
       .footer .copy-right_text .copy_right a {
         color: #0A8CFF; }
   .footer .socail_links {
-    margin-top: 47px; }
+    margin-top: 10px; }
     @media (max-width: 767px) {
       .footer .socail_links {
         margin-top: 30px; } }
